<resources>
    <string name="app_name">TICKET+</string>
    <string name="title1">Ticket+</string>
    <string name="title2">Welcome Back</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter your Password</string>
    <string name="btn_login">SIGN IN</string>
    <string name="btn_register">SIGN UP</string>
    <string name="title3">Welcome</string>
    <string name="user_name">Enter your Name</string>
    <string name="et_email" />
    <string name="btn_register1">SIGN UP</string>
    <string name="btn_login1">SIGN IN</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="verifyEmail">Please Verify Your Email</string>
    <string name="btn_verify">VERIFY</string>
    <string name="btn_start">START NOW</string>
    <string name="btn_logout1">LOG OUT</string>
    <string name="btn_expressway">EXPRESSWAY+</string>
    <string name="btn_train">TRAIN+</string>
    <string name="btn_movie">MOVIE+</string>
    <string name="btn_concert">CONCERT+</string>
    <string name="moviedes">Bruce Wayne and Diana Prince try to bring the metahumans
        of Earth together after the death of Clark Kent. Meanwhile, Darkseid sends
        Steppenwolf to Earth with a vast army to subjugate humans."</string>
    <string name="buyticket">BUY TICKET</string>
    <string name="et_movieName">Enter Movie Name</string>
    <string name="et_userName">Enter Theater Name</string>
    <string name="tv_date">Select Date</string>
    <string name="et_noTicket">Enter No of Tickets</string>
    <string name="btn_add">PAY</string>
    <string name="tv_price">Select Ticket Price</string>
    <string name="tot_price_show">Total Price :</string>
    <string name="price_show">0</string>
    <string name="btn_checkout">CHECKOUT</string>
    <string name="btn_apply">APPLY</string>
    <string name="tv_time">Select Show Time</string>
    <string name="btn_ticket">VIEW TICKET</string>
    <string-array name="theaters">
        <item>Item 1</item>
        <item>Item 1</item>
        <item>Item 1</item>

    </string-array>
</resources>