<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Login">


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/title1"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/actor"
        android:text="@string/title2"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:drawableStart="@drawable/redeye"
        android:drawableLeft="@drawable/redeye"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:text="@string/et_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title3"
        app:layout_constraintVertical_bias="0.182" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="367dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/tochbtn"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.182" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="367dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:background="@drawable/untochbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.366" />



</androidx.constraintlayout.widget.ConstraintLayout>