<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Register">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/title1"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/actor"
        android:text="@string/title3"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="346dp"
        android:layout_height="42dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:drawableStart="@drawable/use"
        android:drawableLeft="@drawable/use"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <EditText
        android:id="@+id/et_email1"
        android:layout_width="346dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_login1"
        android:layout_width="367dp"
        android:layout_height="57dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/untochbtn"
        android:text="@string/btn_login1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register1"
        android:layout_width="367dp"
        android:layout_height="57dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/tochbtn"

        android:text="@string/btn_register1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password1"
        android:layout_width="346dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:drawableStart="@drawable/redeye"
        android:drawableLeft="@drawable/redeye"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email1"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>