<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_date"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".EnterTicketDetail">

    <EditText
        android:id="@+id/et_movieName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_movieName"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_userName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_movieName" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="5dp"
        android:text="@string/tv_date"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />


    <EditText
        android:id="@+id/et_noTicket"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_noTicket"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/tochbtn"
        android:text="@string/btn_add"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot_price_show"
        app:layout_constraintVertical_bias="0.422" />

    <RadioGroup
        android:id="@+id/group_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/time_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/radio_selected"
            android:button="@android:color/transparent"
            android:onClick="checkBtntime"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="10.30"

            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/time_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/radio_selected"
            android:button="@android:color/transparent"
            android:onClick="checkBtntime"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="02.00"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/time_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/radio_selected"
            android:button="@android:color/transparent"
            android:onClick="checkBtntime"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="07.00"
            android:textColor="@color/black" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/group_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_text"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/price_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/radio_selected"
            android:button="@android:color/transparent"
            android:onClick="checkBtn"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="100"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/price_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/radio_selected"
            android:button="@android:color/transparent"
            android:onClick="checkBtn"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="200"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/price_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/radio_selected"
            android:button="@android:color/transparent"
            android:onClick="checkBtn"
            android:padding="10dp"
            android:text="300"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="5dp"
        android:text="@string/tv_price"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_time" />

    <TextView
        android:id="@+id/tot_price_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="5dp"
        android:text="@string/tot_price_show"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_price"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/price_show"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/price_show"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/tot_price_show"
        app:layout_constraintTop_toBottomOf="@+id/group_price"
        app:layout_constraintVertical_bias="0.065" />

    <Button

        android:id="@+id/btn_checkout"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:background="@drawable/tochbtn"
        android:text="@string/btn_checkout"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot_price_show"
        app:layout_constraintVertical_bias="0.422" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_time" />

    <Button
        android:id="@+id/btn_apply_price"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/radio_selected"
        android:padding="10dp"
        android:text="@string/btn_apply"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/group_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/btn_apply_time"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/radio_selected"
        android:padding="10dp"
        android:text="@string/btn_apply"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/group_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_show"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="5dp"
        android:text="@string/tv_time"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_noTicket"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/tv_time_show"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_noTicket"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/btn_ticket"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:background="@drawable/tochbtn"
        android:text="@string/btn_ticket"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot_price_show"
        app:layout_constraintVertical_bias="0.422" />

</androidx.constraintlayout.widget.ConstraintLayout>