<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schema.android.com/apk/res/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Category"
    tools:ignore="NamespaceTypo">


    <Button
        android:id="@+id/btn_expressway"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/cateogarybtn"
        android:fontFamily="@font/acme"
        android:text="@string/btn_expressway"
        android:textColor="@color/category"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_train"
        android:layout_width="300dp"
        android:background="@drawable/cateogarybtn"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/acme"
        android:text="@string/btn_train"
        android:textSize="34sp"
        android:textColor="@color/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_expressway" />

    <Button
        android:id="@+id/btn_movie"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/acme"
        android:text="@string/btn_movie"
        android:background="@drawable/cateogarybtn"
        android:textSize="34sp"
        android:textColor="@color/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_train" />

    <Button
        android:id="@+id/btn_concert"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/acme"
        android:textColor="@color/category"
        android:background="@drawable/cateogarybtn"
        android:text="@string/btn_concert"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_movie" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            app:itemBackground="@color/actionbar"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu" />

    </RelativeLayout>

    <!--    <FrameLayout-->
<!--        android:id="@+id/fragment_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="132dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btn_expressway"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--    </FrameLayout>-->

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomnav"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="70dp"-->
<!--        app:menu="@menu/menu"-->
<!--        android:background="@color/white"-->
<!--        tools:layout_editor_absoluteX="-16dp"-->
<!--        tools:layout_editor_absoluteY="659dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>